--- a/RadiusR.API.CustomerWebApi/Web.config
+++ b/RadiusR.API.CustomerWebApi/Web.config
@@ -176,6 +176,9 @@
       <setting name="EArchiveDisplayAddress" serializeAs="String">
         <value>noreply@netspeed.com.tr</value>
       </setting>
+      <setting name="WebApiPageHash" serializeAs="String">
+        <value>BWzQGencrDqW9qxT</value>
+      </setting>
     </RadiusR.API.CustomerWebApi.Properties.Settings>
   </applicationSettings>
 </configuration>
